@@ -401,7 +401,92 @@ argument_list|(
 operator|new
 name|FldType
 argument_list|(
-literal|"small_s"
+literal|"rare_s1"
+argument_list|,
+operator|new
+name|IValsPercent
+argument_list|(
+literal|95
+argument_list|,
+literal|0
+argument_list|,
+literal|5
+argument_list|,
+literal|1
+argument_list|)
+argument_list|,
+operator|new
+name|SVal
+argument_list|(
+literal|'a'
+argument_list|,
+literal|'b'
+argument_list|,
+literal|1
+argument_list|,
+literal|5
+argument_list|)
+argument_list|)
+argument_list|)
+expr_stmt|;
+name|types
+operator|.
+name|add
+argument_list|(
+operator|new
+name|FldType
+argument_list|(
+literal|"str_s1"
+argument_list|,
+name|ZERO_ONE
+argument_list|,
+operator|new
+name|SVal
+argument_list|(
+literal|'a'
+argument_list|,
+literal|'z'
+argument_list|,
+literal|1
+argument_list|,
+literal|2
+argument_list|)
+argument_list|)
+argument_list|)
+expr_stmt|;
+name|types
+operator|.
+name|add
+argument_list|(
+operator|new
+name|FldType
+argument_list|(
+literal|"long_s1"
+argument_list|,
+name|ZERO_ONE
+argument_list|,
+operator|new
+name|SVal
+argument_list|(
+literal|'a'
+argument_list|,
+literal|'b'
+argument_list|,
+literal|1
+argument_list|,
+literal|5
+argument_list|)
+argument_list|)
+argument_list|)
+expr_stmt|;
+name|types
+operator|.
+name|add
+argument_list|(
+operator|new
+name|FldType
+argument_list|(
+literal|"small_s1"
 argument_list|,
 name|ZERO_ONE
 argument_list|,
@@ -435,7 +520,7 @@ argument_list|(
 operator|new
 name|FldType
 argument_list|(
-literal|"small2_s"
+literal|"small2_s1"
 argument_list|,
 name|ZERO_ONE
 argument_list|,
@@ -694,7 +779,7 @@ argument_list|(
 operator|new
 name|FldType
 argument_list|(
-literal|"missing_s"
+literal|"missing_s1"
 argument_list|,
 operator|new
 name|IRange
