@@ -6249,6 +6249,126 @@ argument_list|()
 return|;
 block|}
 block|}
+DECL|class|IValsPercent
+specifier|public
+specifier|static
+class|class
+name|IValsPercent
+extends|extends
+name|IVals
+block|{
+DECL|field|percentAndValue
+specifier|final
+name|int
+index|[]
+name|percentAndValue
+decl_stmt|;
+DECL|method|IValsPercent
+specifier|public
+name|IValsPercent
+parameter_list|(
+name|int
+modifier|...
+name|percentAndValue
+parameter_list|)
+block|{
+name|this
+operator|.
+name|percentAndValue
+operator|=
+name|percentAndValue
+expr_stmt|;
+block|}
+annotation|@
+name|Override
+DECL|method|getInt
+specifier|public
+name|int
+name|getInt
+parameter_list|()
+block|{
+name|int
+name|r
+init|=
+name|between
+argument_list|(
+literal|0
+argument_list|,
+literal|99
+argument_list|)
+decl_stmt|;
+name|int
+name|cumulative
+init|=
+literal|0
+decl_stmt|;
+for|for
+control|(
+name|int
+name|i
+init|=
+literal|0
+init|;
+name|i
+operator|<
+name|percentAndValue
+operator|.
+name|length
+condition|;
+name|i
+operator|+=
+literal|2
+control|)
+block|{
+name|cumulative
+operator|+=
+name|percentAndValue
+index|[
+name|i
+index|]
+expr_stmt|;
+if|if
+condition|(
+name|r
+operator|<
+name|cumulative
+condition|)
+block|{
+return|return
+name|percentAndValue
+index|[
+name|i
+operator|+
+literal|1
+index|]
+return|;
+block|}
+block|}
+return|return
+name|percentAndValue
+index|[
+name|percentAndValue
+operator|.
+name|length
+operator|-
+literal|1
+index|]
+return|;
+block|}
+annotation|@
+name|Override
+DECL|method|get
+specifier|public
+name|Comparable
+name|get
+parameter_list|()
+block|{
+return|return
+name|getInt
+argument_list|()
+return|;
+block|}
+block|}
 DECL|class|FVal
 specifier|public
 specifier|static
@@ -6964,7 +7084,7 @@ name|fname
 decl_stmt|;
 DECL|field|numValues
 specifier|public
-name|IRange
+name|IVals
 name|numValues
 decl_stmt|;
 DECL|field|vals
@@ -7000,7 +7120,7 @@ parameter_list|(
 name|String
 name|fname
 parameter_list|,
-name|IRange
+name|IVals
 name|numValues
 parameter_list|,
 name|Vals
